Fix : updated z-index of spinner
Removed z-index of the spinner in animation "page-in"

--- a/sass/components/_spinner.scss
+++ b/sass/components/_spinner.scss
@@ -66,5 +66,5 @@
 
 @keyframes page-in{
     0%{opacity: 0;}
-    100%{visibility: visible; opacity: 1; z-index: 9; overflow: hidden;}
+    100%{visibility: visible; opacity: 1; overflow: hidden;}
 }
